# lucid-component-projector

./: .gitignore  Makefile  pyproject.toml
src/lucid_component_projector/: __init__.py  client.py  component.py  helper_installer.py  helper_server.py  protocol.py  serial_conn.py
src/lucid_component_projector/systemd/: lucid-projector-helper.service
tests/: test_contract.py  test_serial_conn.py
